<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.emojigame.core.ui.Theme" />

        <variable
            name="theme"
            type="com.emojigame.core.ui.Theme" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingEnd="1dp"
        android:paddingTop="20dp"
        android:tag="button_bar"
        android:background="@android:color/transparent"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="1dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause"
            android:scaleType="fitCenter"
            app:tint="#4CAF50" />

        <ImageButton
            android:id="@+id/btnHint"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hint"
            android:src="@drawable/ic_lightbulb"
            android:scaleType="fitCenter"
            app:tint="#FFD600" />
    </LinearLayout>
</layout>
