...
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="@{theme.backgroundColor}"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/command_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:clipChildren="false"
...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <!-- Play button -->
        <include layout="@layout/include_play_button"
            android:id="@+id/play_button_inclusion"/>
    </LinearLayout>
</layout>

